--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="ph.edu.dlsu.mobdeve.g24.mco.seedlink">
 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,10 +14,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SeedLink">
         <activity
+            android:name=".ProfilePicActivity"
+            android:exported="false" />
+        <activity
             android:name=".EditProfileActivity"
-            android:exported="false"
-            android:label="@string/title_activity_edit_profile"
-            android:theme="@style/Theme.SeedLink.NoActionBar" />
+            android:exported="false" />
         <activity
             android:name=".ProfileActivity"
             android:exported="false" />
